# voice-assistant

./: .gitignore  chat.py  main.py  package-lock.json  package.json  pyproject.toml  shoprite.py  speech.py  staples.py  target.py  text_main.py
